Update styling of the page, the p, the button, and the labels

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,3 +6,16 @@ body {
 .userResults {
 	display: none;
 }
+
+h1 {
+	color: #5887ff;
+}
+
+label,
+p {
+	color: #715aff;
+}
+
+button {
+	color: #a682ff;
+}
